# cpp-proc-docker

./: README.md
ol9proc/: .bash_profile.dev  .bashrc.dev  docker-compose.yml  dockerfile  entrypoint.sh
ol9proc/examples/: CMakeLists.txt  example_data.sql  hello.pc  proc_compile.txt
ol9proc/examples/cursor-fetch/: CMakeLists.txt  clang-format
ol9proc/examples/cursor-fetch/cmake/: procgen.cmake
ol9proc/examples/cursor-fetch/inc/: xora_alloc.h  xora_contex.h  xora_error.h  xora_proc_contex.h  xora_proc_emp.h  xora_proc_emp_crud.h  xora_proc_emp_fetch.h  xora_proc_helper.h  xora_proc_tx.h
ol9proc/examples/cursor-fetch/src/: main.c  xora_contex.pc  xora_proc_emp_crud.pc  xora_proc_emp_fetch.pc  xora_proc_emp_fvect.pc  xora_proc_emp_stream.pc.bak  xora_proc_tx.pc
ol9proc/examples/hello-world/: .gitignore  CMakeLists.txt  build-cmake.sh
ol9proc/examples/printf-101/: CMakeLists.txt  main.c
ol9proc/examples/simple-fetch/: CMakeLists.txt  build-gcc.sh  proc_compile.txt  simplefetch.pc
oracle23aif/: docker-compose.yml
